--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Web Calculator</title>
-        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div class="flex-container-column card">
@@ -37,6 +37,6 @@
                 <div class="button double equals">=</div>
             </div>
         </div>
-        <script src="assets/kalkulator.js"></script>
+        <script src="kalkulator.js"></script>
     </body>
 </html>
