create calculation history

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Web Calculator</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="assets/style.css" />
     </head>
     <body>
         <div class="flex-container-column card">
@@ -37,6 +37,21 @@
                 <div class="button double equals">=</div>
             </div>
         </div>
-        <script src="kalkulator.js"></script>
+        <div class="history card">
+            <h2>Riwayat Perhitungan</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Angka Pertama</th>
+                        <th>Operator</th>
+                        <th>Angka Kedua</th>
+                        <th>Hasil</th>
+                    </tr>
+                </thead>
+                <tbody id="historyList"></tbody>
+            </table>
+        </div>
+        <script src="assets/storage.js"></script>
+        <script src="assets/kalkulator.js"></script>
     </body>
 </html>
